--- a/GB-API/GB-API.csproj
+++ b/GB-API/GB-API.csproj
@@ -10,11 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-rc.1.22426.7" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.0-rc.1.22426.7" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Server\Data\LocatieDB" />
     </ItemGroup>
 
 </Project>
