Sorry Jelle als ik nu alles sloop.

--- a/GB-API/appsettings.json
+++ b/GB-API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "testbrandweer": "Server=localhost;Database=testbrandweer;User Id=postgres;Password=brandweer;Port=5432"
+  }
 }
