TomTom Api verkeersincidenten ophalen
• Verkeersincidenten ophalen in een bbox radius

--- a/GB-API/GB-API.csproj
+++ b/GB-API/GB-API.csproj
@@ -18,4 +18,8 @@
       <Content Include="Properties\launchSettings.json" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MIC-RequestSender\MIC-RequestSender.csproj" />
+    </ItemGroup>
+
 </Project>
