--- a/GB-API/GB-API.csproj
+++ b/GB-API/GB-API.csproj
@@ -31,4 +31,8 @@
       <ProjectReference Include="..\MIC-RequestSender\MIC-RequestSender.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
