--- a/TestForReadingJsonBody/TestForReadingJsonBody.csproj
+++ b/TestForReadingJsonBody/TestForReadingJsonBody.csproj
@@ -13,4 +13,11 @@
       <ProjectReference Include="..\MIC-RequestSender\MIC-RequestSender.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
